--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -103,8 +103,7 @@ created from a merger \citep{L13}.
 		The cross markers show the positions of the northwest (NW) and
 		southeast (SE) dark matter density peaks, and the center of mass (CM)
 		locations respectively. Note that the mass ratio of the NW subcluster
-		to the SE subcluster is $\sim 2:1$ \citep{Jee13}. The yellow marker
-		indicates the location of the cool gas core. 
+		to the SE subcluster is $\sim 2:1$ \citep{Jee13}. 
 		The dashed white lines indicate the approximate location and extent of the northwest radio relic (NW relic), the east radio relic (E relic) and the
 		southeast radio relic (SE relic) \citep{L13}.
 		\label{fig:config}}
