--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -632,7 +632,7 @@ that our results favor the returning scenario despite the
 uncertainties.
 (See appendix~\ref{app:Bayes_factor}). Finally, we note that the estimate of NW shock velocity at $2500
 \pm^{400}_{300}~\kilo\meter~\second^{-1}$ by \cite{L13} was reported with respect to
-the turbulent ICM, not the propogation velocity with respect to center of
+the turbulent ICM, not the propagation velocity with respect to center of
 mass, so we have not made use of the estimate of \cite{L13} in this
 calculation. \par
 \begin{figure}
